<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.depa.flagmaker.MainActivity">
    <item
        android:id="@+id/action_clear"
        android:title="@string/clear_whole_flag"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_what"
        android:title="@string/what"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_undo"
        android:title="@string/undo"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_undo_24dp"/>

    <item
        android:id="@+id/action_save"
        android:title="@string/save"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_save_24dp"/>

    <item
        android:id="@+id/action_noad"
        android:title="@string/remove_ads"
        app:showAsAction="ifRoom"
        android:icon="@drawable/noad"/>

    <item
        android:id="@+id/selfad"
        android:title="@string/remove_ads"
        app:showAsAction="never"/>
</menu>
