<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".What">

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        app:layout_constraintTop_toBottomOf="@id/textView7"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/this_button_will_add_the_part_you_made_to_your_flag"
                android:textAlignment="viewEnd"
                app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton"
                app:layout_constraintEnd_toStartOf="@+id/floatingActionButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/floatingActionButton" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/this_button_will_let_you_pick_a_color_for_the_part_of_the_flag_that_you_are_about_to_add"
                app:layout_constraintBottom_toBottomOf="@+id/floatingActionButton2"
                app:layout_constraintEnd_toStartOf="@+id/floatingActionButton2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/floatingActionButton2"
                android:textAlignment="viewEnd"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:clickable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/floatingActionButton2"
                app:srcCompat="@drawable/ic_add_24dp"
                android:focusable="false"
                app:elevation="0dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/floatingActionButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:clickable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_color_24dp"
                android:focusable="false"
                app:elevation="0dp"/>

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageButton2"
                app:layout_constraintStart_toStartOf="@+id/imageButton2"
                app:layout_constraintTop_toBottomOf="@+id/imageButton2"
                app:srcCompat="@drawable/ic_save_24dp" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="@+id/floatingActionButton"
                app:layout_constraintStart_toStartOf="@+id/floatingActionButton"
                app:layout_constraintTop_toBottomOf="@+id/floatingActionButton"
                app:srcCompat="@drawable/ic_undo_24dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/use_this_button_to_save_the_flag_to_your_gallery_you_will_find_it_in_a_folder_named_flags"
                android:textAlignment="viewEnd"
                app:layout_constraintBottom_toBottomOf="@+id/imageButton"
                app:layout_constraintEnd_toStartOf="@+id/imageButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageButton" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/use_this_button_to_remove_the_last_part_you_added"
                android:textAlignment="viewEnd"
                app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
                app:layout_constraintEnd_toStartOf="@+id/imageButton2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageButton2" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/this_app_allows_you_to_make_flags_by_overlaying_many_different_kinds_of_flag_parts"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/got_it"
        android:textColor="#fff"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card"
        android:onClick="finish"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/how_does_it_work"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</android.support.constraint.ConstraintLayout>